ECE Result Calculator index Uploaded

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     <div>
         <ol>
             <li>
-                <a href="/ECE Sem 3 Result Calculator/index.html" target="_blank">
-                    <img src="/ECE Sem 3 Result Calculator/Sem3Gpa.png" alt="Thumbnail"></a>
+                <a href="./ECE Sem 3 Result Calculator/" target="_blank">
+                    <img src="./ECE Sem 3 Result Calculator/Sem3Gpa.png" alt="Thumbnail"></a>
                 <!-- <a href="https://github.com/AashishKrPd/Sigma-Web-Development-Projects/tree/main/Card%20Design"
                     target="_blank"> -->
                     <name>ECE Sem 3 Result Calculator</name>
