--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             <li>
                 <a href="./ECE Sem 3 Result Calculator/" target="_blank">
                     <img src="./ECE Sem 3 Result Calculator/Sem3Gpa.png" alt="Thumbnail"></a>
-                <!-- <a href="https://github.com/AashishKrPd/Sigma-Web-Development-Projects/tree/main/Card%20Design"
-                    target="_blank"> -->
+                <a href="https://github.com/AashishKrPd/Self-Made-Websites/tree/main/ECE%20Sem%203%20Result%20Calculator"
+                    target="_blank">
                     <name>ECE Sem 3 Result Calculator</name>
                 </a>
             </li>
