Very Simple Calculator

--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
     <div>
         <ol>
             <li>
+                <a href="./Very Simple Calculator/" target="_blank">
+                    <img src="./Very Simple Calculator/VerySimpleCalc.png" alt="Thumbnail"></a>
+                <a href="https://github.com/AashishKrPd/Self-Made-Websites/tree/main/Very%20Simple%20Calculator"
+                    target="_blank">
+                    <name>Very Simple Calculator</name>
+                </a>
+            </li>
+            <li>
                 <a href="./ECE Sem Result Calculator/" target="_blank">
                     <img src="./ECE Sem Result Calculator/SemGpa.png" alt="Thumbnail"></a>
                 <a href="https://github.com/AashishKrPd/Self-Made-Websites/tree/main/ECE%20Sem%201%20Result%20Calculator"
