--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <li>
                 <a href="./ECE Sem Result Calculator/" target="_blank">
                     <img src="./ECE Sem Result Calculator/SemGpa.png" alt="Thumbnail"></a>
-                <a href="https://github.com/AashishKrPd/Self-Made-Websites/tree/main/ECE%20Sem%201%20Result%20Calculator"
+                <a href="https://github.com/AashishKrPd/Self-Made-Websites/tree/main/ECE%20Sem%20Result%20Calculator"
                     target="_blank">
                     <name>ECE Sem Result Calculator</name>
                 </a>
