--- a/ECE Sem Result Calculator/index3.html
+++ b/ECE Sem Result Calculator/index3.html
@@ -17,6 +17,8 @@
     </nav>
     <div class="container">
         <div class="title">ECE Sem 3 GPA Calculator by AKP</div>
+        
+        <div class="info">only valid for SIST (2022-2026)</div>
         <div class="subject notSub">
             <label>Subjects × Credits : </label>
             <label>Full Marks</label>
