Index File Uploaded

--- a/index.html
+++ b/index.html
@@ -84,18 +84,18 @@
         <ol>
             <li>
                 <a href="./Very Simple Calculator/" target="_blank">
-                    <img src="./Very Simple Calculator/VerySimpleCalc.png" alt="Thumbnail"></a>
+                    <img src="./Thumbnails/VerySimpleCalc.png" alt="Thumbnail"></a>
                 <a href="https://github.com/AashishKrPd/Self-Made-Websites/tree/main/Very%20Simple%20Calculator"
                     target="_blank">
                     <name>Very Simple Calculator</name>
                 </a>
             </li>
             <li>
-                <a href="./ECE Sem Result Calculator/" target="_blank">
-                    <img src="./ECE Sem Result Calculator/SemGpa.png" alt="Thumbnail"></a>
-                <a href="https://github.com/AashishKrPd/Self-Made-Websites/tree/main/ECE%20Sem%20Result%20Calculator"
+                <a href="./CGPA Calculator/" target="_blank">
+                    <img src="./Thumbnails/cgpaCalculator.png" alt="Thumbnail"></a>
+                <a href="https://github.com/AashishKrPd/Self-Made-Websites/tree/main/CGPA%20Calculator"
                     target="_blank">
-                    <name>ECE Sem Result Calculator</name>
+                    <name>CGPA Calculator</name>
                 </a>
             </li>
             
