SVG Buttons added and Row Color AutoUpdate

--- a/CGPA Calculator/index.html
+++ b/CGPA Calculator/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <img src="plus.svg" alt="-">
     <!-- <div class="nav"> -->
     <div class="header">
         <h2 class="row">GPA/CGPA Calculator</h2>
@@ -19,7 +20,7 @@
     </div>
     <div class="results row">
         <div class="btns">
-            <button class="add btn" title="Add Another Row" onclick="AddNewSub()">+</button>
+            <button class="add btn" title="Add Another Row" onclick="AddNewSub()"><img src="plus.svg" alt="plus"></button>
             <button class="calc btn" title="Calculate GPA/CGPA" onclick="CGPA()">CGPA</button>
         </div>
         <span title="round to " class="cgpa">&lt; cgpa &gt;</span>
