Tic Tac Toe Uploaded

--- a/index.html
+++ b/index.html
@@ -92,10 +92,18 @@
             </li>
             <li>
                 <a href="./CGPA Calculator/" target="_blank">
-                    <img src="./Thumbnails/cgpaCalculator.png" alt="Thumbnail"></a>
+                    <img src="./Thumbnails/CgpaCalculator.png" alt="Thumbnail"></a>
                 <a href="https://github.com/AashishKrPd/Self-Made-Websites/tree/main/CGPA%20Calculator"
                     target="_blank">
                     <name>CGPA Calculator</name>
+                </a>
+            </li>
+            <li>
+                <a href="./Tic Tac Toe/" target="_blank">
+                    <img src="./Thumbnails/TicTacToe.png" alt="Thumbnail"></a>
+                <a href="https://github.com/AashishKrPd/Self-Made-Websites/tree/main/Tic%20Tac%20Toe"
+                    target="_blank">
+                    <name>Tic Tac Toe</name>
                 </a>
             </li>
             
